// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wrapper /> it renders a dark Wrapper 1`] = `
.c0 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  border: 1px solid #f2f5fa;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

@media (max-width:600px) {
  .c0 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c0 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    this is a Button 
    dark
     
  </div>
</div>
`;

exports[`<Wrapper /> it renders a default Wrapper 1`] = `
.c0 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

@media (max-width:600px) {
  .c0 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c0 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    this is a Button 
    default
     
  </div>
</div>
`;

exports[`<Wrapper /> it renders a light Wrapper 1`] = `
.c0 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  border: 1px solid #bbcadf;
  background-color: #fff;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

@media (max-width:600px) {
  .c0 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c0 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    this is a Button 
    light
     
  </div>
</div>
`;

exports[`<Wrapper /> it renders a main Wrapper 1`] = `
.c0 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  position: relative;
  padding: 4rem;
  background-color: #fff;
}

.c0:before {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  max-height: 30rem;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  content: "";
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

@media print {
  .c0:before {
    display: none;
  }
}

@media (max-width:600px) {
  .c0 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c0 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    this is a Button 
    main
     
  </div>
</div>
`;

exports[`<Wrapper /> should render a large wrapper 1`] = `
.c0 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  padding: 4rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

@media (max-width:600px) {
  .c0 {
    padding: 1.6rem 1rem;
  }
}

@media print {
  .c0 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    I am a large wrapper
  </div>
</div>
`;
